# qt-creator-tabbededitor-plugin

./: CMakeLists.txt  Makefile  README.md  TabbedEditor.json  TabbedEditor.json.in  TabbedEditor.pro  TabbedEditor_dependencies.pri  qt_compile_mac_dev.sh  tabbar.cpp  tabbar.h  tabbededitor.cpp  tabbededitor.h  tabbededitor_global.h  tabbededitorconstants.h
include/plog/: Init.h  Log.h  Logger.h  Record.h
include/plog/Appenders/: AndroidAppender.h  ColorConsoleAppender.h  ConsoleAppender.h  IAppender.h  RollingFileAppender.h
include/plog/Formatters/: CsvFormatter.h  FuncMessageFormatter.h  TxtFormatter.h
resources/styles/: default.qss
